tweak gc logging settings